--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -3,15 +3,9 @@
   background-image: url('https://images.pexels.com/photos/7793699/pexels-photo-7793699.jpeg');
   background-size: cover;
   background-attachment: fixed;
-  height: 80vh;
+  /*height: 80vh;*/
 }
 
-/* Bloco da tab contendo as avaliações */
-.formulario{ 
-  background-color: #F6F8F8;
-  margin-left: auto; margin-right: auto; 
-  max-width: 90vw; 
-}
 
 .tab > #av{
   padding-left: 1vw;
@@ -54,24 +48,66 @@
 .tabcontent {
   padding: 6px 12px;
   border-top: none;
+  overflow: hidden;
 }
 
-/*layout avaliações*/
+/* Bloco da tab contendo as avaliações */
+.formulario{ 
+  background-color: #F6F8F8;
+  margin-left: auto; margin-right: auto; 
+  max-width: 90vw; 
+  overflow: hidden;
+}
 
 .avaliacao {
-  margin-top: 20px;
+  margin-top: 1em;
+  overflow: hidden;
+
 }
 
 .avaliacao h4 {
   margin-bottom: 10px;
 }
 
-.opcoes {
+
+.radio-buttons {
+  float: right;
+  display: grid;
+  text-align: center;
+}
+
+.radio-buttons label br{
+  display: flex;
+  flex-wrap: wrap;
+  content: " ";
+  margin-top: -0.5em;
+  text-overflow:clip;
+  
+}
+
+.radio-buttons label {
+  font-weight: bold;
+  padding-inline: 1em;
+  /*
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;*/
+}
+
+.radio-buttons input {
+  /*
   display: flex;
   flex-direction: column;
+  margin-bottom: 5px;*/
+  margin-bottom: 0.5em; margin-top: 1em;
+
+  
 }
 
-.opcoes input {
-  margin-bottom: 5px;
-}
+.perguntas{
+  background-color: rgb(206, 190, 190);
+  overflow-wrap: break-word;
+  font-size: small;
+  max-width: 50vw;
 
+}
