--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -59,55 +59,13 @@
   overflow: hidden;
 }
 
-.avaliacao {
-  margin-top: 1em;
-  overflow: hidden;
 
-}
-
-.avaliacao h4 {
-  margin-bottom: 10px;
+h4{
+  background-image: linear-gradient(to right, #185376, #5C93AD, #e5f3f3);
 }
 
 
-.radio-buttons {
+.radioOptions{
   float: right;
-  display: grid;
-  text-align: center;
-}
-
-.radio-buttons label br{
-  display: flex;
-  flex-wrap: wrap;
-  content: " ";
-  margin-top: -0.5em;
-  text-overflow:clip;
-  
-}
-
-.radio-buttons label {
-  font-weight: bold;
-  padding-inline: 1em;
-  /*
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 5px;*/
-}
-
-.radio-buttons input {
-  /*
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 5px;*/
-  margin-bottom: 0.5em; margin-top: 1em;
-
-  
-}
-
-.perguntas{
-  background-color: rgb(206, 190, 190);
-  overflow-wrap: break-word;
-  font-size: small;
-  max-width: 50vw;
-
+  margin-inline: 2em;
 }
