indicie de satisfação refeito

--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -11,62 +11,87 @@
 
     <div id="ST" class="tabcontent" [hidden]="!openST">
       <h3>Satisfação no Trabalho</h3>
-      <p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna,
-        benefícios, cultura organizacional e oportunidades de crescimento.</p>
-
-      <div class="avaliacao">
+      <p>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna,<br />
+       benefícios, cultura organizacional e oportunidades de crescimento.</p>
+        
+       <div class="satisfação">
+        <p>Concordo<br /> muito</p>
+        <p>Concordo</p>
+        <p>Indiferente<br />/Não sei</p>
+        <p>Discordo</p>
+        <p>Discordo<br /> Muito</p>
+       </div>
+           
         <h4>Gestão Interna</h4>
-        <div class="perguntas">
-          <p>Você acredita que a empresa está ativamente engajada em melhorar com base nos feedbacks recebidos?</p>
-          <p>Os processos de tomada de decisão são claros e compreensíveis para todos os colaboradores.</p>
-          <p>A liderança demonstra empatia e compreensão em relação às necessidades e desafios dos colaboradores.</p>
 
-          <h4>Benefícios</h4>
-          <p>Os benefícios oferecidos têm um impacto positivo na sua satisfação geral no trabalho.</p>
-          <p>Além dos benefícios tangíveis, a empresa oferece vantagens não-materiais que contribuem para a satisfação
-            no trabalho.</p>
-          <p>Os benefícios oferecidos estão alinhados com seus valores pessoais e necessidades individuais.</p>
-
-          <h4>Cultura Organizacional</h4>
-          <p>Você acredita que os valores da empresa são incorporados nas práticas diárias e decisões?</p>
-          <p>A diversidade é valorizada e promovida ativamente na cultura organizacional.</p>
-          <p>Você percebe estímulos à inovação e criatividade na cultura organizacional?</p>
-
-          <h4>Oportunidades de Crescimento</h4>
-          <p>A empresa fornece feedback pessoal construtivo para promover o desenvolvimento profissional.</p>
-          <p>Como você avalia as oportunidades de avanço na sua carreira dentro da empresa?</p>
-          <p>Você se sente incentivado(a) a buscar aprendizado contínuo no seu ambiente de trabalho?</p>
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Você acredita que a empresa está ativamente engajada em melhorar com base nos feedbacks recebidos?</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
         </div>
 
-        <div class="row">
-          <div class="radio-buttons">
-            <div class="col">
-              <label>Concordo</label>
-              <input type="radio" name="gi" value="1" *ngFor="let _ of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]">
-            </div>
-            <div class="col">
-              <label>Concordo <br />pouco</label>
-              <input type="radio" name="gi" value="2" *ngFor="let _ of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]">
-            </div>
-
-            <div class="col">
-              <label>Indiferente <br />/Não sei</label>
-              <input type="radio" name="gi" value="3" *ngFor="let _ of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]">
-            </div>
-
-            <div class="col">
-              <label>Discordo <br />pouco</label>
-              <input type="radio" name="gi" value="4" *ngFor="let _ of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]">
-            </div>
-
-            <div class="col">
-              <label>Discordo</label>
-              <input type="radio" name="gi" value="5" *ngFor="let _ of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]">
-            </div>
-          </div>
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio2">Os processos de tomada de decisão são claros e compreensíveis para todos os colaboradores.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
         </div>
-      </div>
+        
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio2">A liderança demonstra empatia e compreensão em relação às necessidades e desafios dos colaboradores.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
 
+        <h4>Benefícios</h4>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Os benefícios oferecidos têm um impacto positivo na sua satisfação geral no trabalho.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Além dos benefícios tangíveis, a empresa oferece vantagens não-materiais que contribuem para a satisfação
+            no trabalho.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Os benefícios oferecidos estão alinhados com seus valores pessoais e necessidades individuais.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <h4>Cultura Organizacional</h4>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Você acredita que os valores da empresa são incorporados nas práticas diárias e decisões?</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">A diversidade é valorizada e promovida ativamente na cultura organizacional.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Você percebe estímulos à inovação e criatividade na cultura organizacional?</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <h4>Oportunidades de Crescimento</h4>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">A empresa fornece feedback pessoal construtivo para promover o desenvolvimento profissional.</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Como você avalia as oportunidades de avanço na sua carreira dentro da empresa?</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+        <div class="custom-control custom-radio">
+          <label class="custom-control-label" for="customRadio1">Você se sente incentivado(a) a buscar aprendizado contínuo no seu ambiente de trabalho?</label>
+          <input class="radioOptions" type="radio" name="radioOption" value="2" *ngFor="let _ of [1, 2, 3, 4, 5]">
+        </div>
+
+     
 
       <div id="SP" class="tabcontent" [hidden]="!openSP">
         <h3>Satisfação Pessoal</h3>
@@ -75,7 +100,6 @@
           saúde, autocuidado, relacionamentos no ambiente doméstico, tempo de descanso e atividades de lazer.</p>
 
       </div>
-
 
       <div id="RI" class="tabcontent" [hidden]="!openRI">
         <h3>Relações Interpessoais</h3>
