--- a/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.css
+++ b/frontend/src/app/components/pages/colaboradores/cadastro-colaboradores/cadastro-colaboradores.component.css
@@ -1,35 +1,68 @@
+.body {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.titulo {
+  text-align: center;
+  padding: 10px;
+  color: white;
+}
+
 .formulario {
-    padding: 50px;
-    max-width: auto;
+  padding: 50px;
+  max-width: auto;
+}
+
+.register-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: linear-gradient(0deg, rgba(156,205,219,1) 0%, rgba(87,144,171,1) 50%, rgba(6,68,105,1) 100%);
 }
 
 .div-form {
-    display: flex;
-    justify-content: center
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  justify-content: center;
+  background-color: white;
+  width: 35%;
+  height: max-content;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 40px;
+  border-radius: 20px;
+  box-shadow: 20px, 20px;
 }
 
 .l-form {
-    display: block;
-    margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 .i-form {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    background-color: aliceblue;
-
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  background-color: aliceblue;
+  border-radius: 10px;
 }
 
 .i-select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    background-color: aliceblue;
-
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  background-color: aliceblue;
 }
 
 .error {
-    color: red;
-    font-size: 12px;
+  color: red;
+  font-size: 12px;
 }
