--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.css
@@ -68,26 +68,22 @@ h4{
 
 
 
-.satisfacao{
-  position: absolute;
-  display: flex;
-  flex-wrap: nowrap;
-  right: 8.1%; top: 31%;
-}
-
-.satisfacao p{
+th p{
   padding-inline: 1.1em;
   font-size: small;
   font-weight: bold;
   text-align: center;
 }
 
-
+.radioOpcao{
+    position: absolute;
+    cursor: pointer;
+    z-index: 10;
+}
 
 .radio{
-  display: inline-flex; /* deixa as colunas em linhas*/
-  margin-inline: 2.2em;
-  flex-wrap: nowrap;
+  display: inline; /* deixa as colunas em linhas*/
+  margin-inline: 2.2em; 
 
 }
 
@@ -98,3 +94,5 @@ h4{
   width: 50%;
   
 }
+
+
